# 7-Day-AI-Agents-Email-Crash-Course

./: .gitignore  README.md  README_SECRETS.md  packages.txt  requirements.txt
aihero/course/: 7-Day Email Course on Building AI Agents.ipynb  Day 1 - Ingest and Index Your Data.ipynb  __init__.py  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
aihero/course/.ipynb_checkpoints/: 7-Day Email Course on Building AI Agents-checkpoint.ipynb  Day 1 - Ingest and Index Your Data-checkpoint.ipynb  pyproject-checkpoint.toml
aihero/course/logs/: faq_agent_20251001_221330_330b16.json  faq_agent_v2_20251001_230255_a8871d.json  faq_agent_v2_20251001_230300_6a4a22.json  faq_agent_v2_20251001_230310_667eca.json  faq_agent_v2_20251001_230317_37c142.json  faq_agent_v2_20251001_230327_4e6e81.json  faq_agent_v2_20251001_230333_cd5eb7.json  faq_agent_v2_20251001_230338_a348f7.json  faq_agent_v2_20251001_230343_b0092e.json  faq_agent_v2_20251001_230351_168e8e.json  faq_agent_v2_20251001_230355_b57d02.json
eval/: README.md  data-gen.ipynb  evaluations.ipynb
logs/: evaluation_results.csv  generated_test_data.json  gh_agent_20251003_223237_2efc1f.json  gh_agent_20251003_223314_864384.json  gh_agent_20251003_233528_7c5fd3.json  gh_agent_20251004_004211_2ac759.json  gh_agent_20251004_025044_c9ba1b.json  gh_agent_20251004_025944_7d5d55.json  gh_agent_20251012_020652_90bcc3.json  gh_agent_20251012_023447_c10fae.json  gh_agent_20251012_023515_2f4dfc.json  gh_agent_20251012_063603_6554a6.json
(+20 files in other folders)
